app/styles/main.css
body, html {
	height: 100%;
	width: 100%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-overflow-scrolling: touch;
}

.wrapper {
	height: 100%;
	width: 100%;
	overflow: hidden;
	position: fixed;
}

app-header {
  overflow: hidden;
}

disclaimer blockquote {
	border: none;
}

disclaimer img {
	margin: 20px;
}

feedback textarea {
	max-width: 100%;
	max-height: 500px;
}

.modal .glyphicon {
	color: white;
}

.form-control {
	background-color: rgb(60, 60, 60) !important;
  color: white !important;
}

.navbar {
	margin-bottom: 0;
  background-color: #222;


}

.modal-content {
	background-color: rgb(60,60,60);
	color: white;
}

#map {
	background-color: black;
	position: fixed;
	top:50px;
	bottom: 0;
	right: 0;
	left: 0;

}

/*hyperlinks*/
.ps-link, .ps-link:active, .ps-link:visited {
	color: rgb(0, 137, 255);
}

.ps-link:hover {
	color: yellow;
}

/*BootStrap overwrites*/
/*buttons*/
.btn-group {
  z-index: 1000;
}
.btn-default, .btn-default:active, .btn-default:focus {
  background-color: transparent;
  color: white;
}

.btn-default:hover, .btn-default.active {
	background-color: rgb(60, 60, 60) !important;
	border-color: rgba(71,151,220,1) !important;
	color: rgba(71,151,220,1) !important;
}

.btn-default.disabled, .btn-default[disabled] {
	color: #fff;
	background-color: black;
	opacity: 0.1;
}

.glyphicon.highlighted{
  -moz-text-shadow: 0 0 16px rgba(71,151,220,1),0 0 16px rgba(0, 137, 255, 1),0 0 16px rgba(0, 137, 255, 1);
  text-shadow: 0 0 16px rgba(71,151,220,1),0 0 16px rgba(0, 137, 255, 1),0 0 16px rgba(0, 137, 255, 1);
}

/*map panels*/
.collapse-header {
  color: white;
  font-size: 16pt;
  font-weight: normal;
  margin: 1em;
  cursor: pointer;
}

.collapse-header .glyphicon{
  color: white;
  margin-right: 10px;
  font-size: 16pt;
}


.collapse-panel {
  color: white;
    overflow: hidden;
    transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height;
}

/*basemap panel*/
base-map-panel {
  position: absolute;
  top: 50px;
  right:300px;
  z-index: 100;
  background-color: rgba(60,60,60,0.8);
  border-radius: 0 0  0 8px ;
  transition-property: right;
  transition: 0.5s;
    -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
}
.selected-basemap img{
  -moz-box-shadow: 0px 0px 23px 0px rgba(71,151,220,1);
  box-shadow: 0px 0px 23px 0px rgba(71,151,220,1);
}
base-map-panel img{
  margin: 5px;
  width: 76px;
  height: 51px;
}
base-map-panel .collapse-panel {
  padding: 0;
}
base-map-panel .collapse-panel.collapsed {
  padding: 0 10px 10px 10px;
  height: 200px;
}
.basemap-type {
  cursor: pointer;
}

/*tool panel*/
tool-panel {
  position: absolute;
  top: 50px;
  left:0px;
  z-index: 10000;
	color: white;
  background-color: rgba(60,60,60,0.8);
  border-radius: 0 0 8px 0;
  -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
}

tool-panel .glyphicon {
	cursor: pointer;
	padding: 4px;
}

.tool-wrapper {
	margin: 10px;
}

/*bookmark tool*/
.bookmark {
	margin-bottom: 4px;
}
.bookmark-name {
	display: inline-block;
	width: 230px;
	cursor: pointer;
}
.bookmark-input {
	display: inline-block;
	width: 210px;
}

/*draw tool*/
draw-tool textarea {
	max-width: 100%;
	max-height: 90px;
	min-height: 90px;
}


/*overview panel*/
overview-panel {
  position: absolute;
  bottom: 0;
  right:300px;
  z-index: 100;
  background-color: rgba(60,60,60,0.8);
  border-radius: 8px 0  0  ;
  transition-property: right;
  transition: 0.5s;
    -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
}
.esriOverviewMap {
  width: 100% !important;
}

.ovwContainer {
  width: 100% !important;
}
#overview-map {
  width: 100% !important;
}
#overview-map_root {
  width: 100% !important;
}



/*overwrite react grid classes*/
.ngReactGrid {
    padding: 0;
    cursor: pointer;
    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
}
.ngReactGrid .ngReactGridFooter, .ngReactGrid table th, .ngReactGrid h1, .ngReactGrid .ngReactGridHeaderWrapper{
  margin-top: 0px;
  background: rgba(60, 60, 60, 0.4);
  color: white;
}

.ngReactGridFooter {
  display: none;
}

.ngReactGrid table {
  background-color: rgba(60, 60, 60, 0.4);
  color: white;
}
.ngReactGrid table tr:nth-child(odd) td {
  background: rgba(90, 90, 90, 0.4);
}
.ngReactGrid table tr:nth-child(even) td {
  background: rgba(60, 60, 60, 0.4);
}
.ngReactGrid table tr {
  border: 1px solid #CCC;
}

.ngReactGrid .ngGridHeaderCellText {
  width:65%;
}


/*side panel*/
side-panel {
  z-index: 101;
}
.ng-pageslide-right {
	background: rgba(255,255,255,0);
	z-index: 1000; position: fixed; width: 300px; height: 100%; overflow: hidden; transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height; top: 50px !important; bottom: 0px; right: 0px;
	}
.panel-default > .panel-heading {
  background: rgb(84,134,50);
  -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
  border: none;
  margin-top: 0 !important;
  color: white;
  border-radius: 0;
}
.panel-default {
  border: none;
}
.accordion {
  position: relative;
  overflow: none;
}
.panel {
  background-color: transparent;
}
.panel-body {
  background-color: rgba(60,60,60,0.8);
  color: white;
  border: none !important;
}
/*property search*/
property-search {
  position: absolute;
  top: 40px;
  bottom: 0;
  right: 0;
  left: 0;
  overflow: none;
}

.typeahead-clear {
	position: absolute;
	top: 8px;
	right: 8px;
	color: #ddd;
	cursor: pointer;
	z-index: 1000;
}

.tabcontainer {
  position: absolute;
  top: 40px;
  left: 0px;
  bottom: 40px;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

#proptabs {
  position: absolute;
  bottom: -15px;
  left: -15px;
  right: -15px;
  height: 40px;
  background: #444;
  display: inline-block;
  padding-right: 12px;
  padding-left: 12px;
}

#proptabs .glyphicon {
  font-size: 16pt;
  margin: 6px 12px 6px 6px;
  cursor: pointer;
}

.grid-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

.grid-footer .glyphicon {
  cursor: pointer;
}

.disabledTab {
  opacity: 0.05;
}


/*layer list*/
layer-list .panel-body {
  padding: 0 0 0 15px;
	overflow: auto;
}
.layer .btn {
	margin-right: 6px;
}
.layer {
	margin-top: 6px;
	margin-bottom: 6px;
}
.sub-layer {
	margin-top: 6px;
	margin-left: 10px;
	margin-bottom: 6px;
}
.legend img {
  margin-right: 6px;
  height: 20px;
  width: 20px;
}

/*opacity slider*/
slider {
  position: relative;
  height: 20px;
  margin-top: 30px;
  margin-right: 50px;
  width: 95%;
  display: block;
}

.bar {
  width: 100%;
  height: 100%;
  position: absolute;
  display: block;
  background-color: #eee;
  top: 0;
}

.pointer {
  height: 100%;
  width: 20px;
  position: absolute;
  display: block;
  background: #ccc;
  top: 0;
}

.bubble {
  position: absolute;
  top: -100%;
  display: block;
}

/*overwrite Esri classes*/
.esriPopup .titleButton.maximize {
  display: none;
}

.arcgisSearch {
	position: absolute;
	bottom: 6px;
	left: 6px;
	z-index: 1000;
}

.suggestionsMenu {
	position: relative !important;
	bottom: 190px;
	left: 6px;
}


.esriSimpleSliderBL {
	bottom: 50px !important;
	border-color: white !important;
}

.esriSimpleSliderBL div{
	color: white;
	background-color: rgba(60,60,60,0.8) ;
	border-color: white !important;
}
.esriSimpleSliderBL div:hover{
	color: rgba(71,151,220,1);
	background-color: rgba(60,60,60,0.8) ;
	border-color: rgba(71,151,220,1) !important;
}
.esriSimpleSliderDisabledButton {
	color: #aaa !important;
	background-color: #bbb !important;
}

.searchBtn {
	background-color: rgba(60,60,60,0.8) !important;
	border-color: white !important;
}
.searchIcon {
	color: white;
}
.searchInput, .searchClose, .searchSpinner {
	background-color: rgb(60, 60, 60) !important;
  color: white !important;
}

#homeButton {
  position: absolute;
  bottom: 52px;
  left: 75px;
  z-index: 50;
}

.HomeButton .home {
	background-color: rgba(60,60,60,0.8) !important;
}

#locateButton {
	position: absolute;
	bottom: 52px;
	left: 112px;
	z-index: 50;
}

.LocateButton .zoomLocateButton {
	background-color: rgba(60,60,60,0.8) !important;
}

.map .tooltip {
  width: 100px;
  word-wrap: break-word;
  position: absolute !important;
  border: 1px solid #7EABCD;
  background-color: rgba(0,0,0,0.5) !important;
	color: white;
  padding: 5px;
  font-size: 9pt;
  z-index: 9999;
  -o-border-radius: 4px;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
	opacity: 1 !important;
}


/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {

}

